Bug #2171 - Accessibility : Red Log in box on Homepage slider is low contrast

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1109,13 +1109,16 @@ body form{
             float: left;
             width: 32.5%;
             border-radius: @border-radius-left;
-            color: @white;
+            color: @black;
             height: 295px;
             @media (max-width: @screen-xs-max){
                 background-position: right -44px;
                 width: 100%;
                 float: none;
                 padding-top: 1px;
+            }
+            .btn{
+                color: @white;
             }
             h4{
                 margin-bottom: 25px;
